unpackaged/main/default/objects/ffct__ComponentCountInfo__c/ffct__ComponentCountInfo__c.object-meta.xml
<CustomObject>
    <description>Used by the Pre Upgrade Package tool.</description>
    <label>Component Count Information</label>
    <nameField>
        <label>Component Count Information Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component Count Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>