unpackaged/main/default/objects/ffct__ComponentCountInfo__c/fields/ffct__Count__c.field-meta.xml
<CustomField>
    <fullName>ffct__Count__c</fullName>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>