unpackaged/main/default/objects/ffct__ComponentCountInfo__c/fields/ffct__ReleasePackage__c.field-meta.xml
<CustomField>
    <fullName>ffct__ReleasePackage__c</fullName>
    <label>Release Package</label>
    <referenceTo>ffct__ReleasePackage__c</referenceTo>
    <relationshipLabel>Component Count Information</relationshipLabel>
    <relationshipName>ComponentCountInfos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>